# neon_learn

./: CMakeLists.txt  README.md  build.sh
include/: neon_learn.h
src/: lesson_01_types.cpp  lesson_02_init_reg.cpp  lesson_03_load.cpp  lesson_04_store.cpp  lesson_05_get_set.cpp  lesson_06_reorder_data.cpp  lesson_07_vadd.cpp  lesson_08_vmul.cpp  lesson_09_math.cpp  lesson_10_compare.cpp  lesson_11_reduce.cpp  lesson_12_logic.cpp  lesson_13_assember.cpp  main.cpp  sort_with_index.cpp  tutorial_01.cpp
src/examples/: image_rgb2gray.cpp  image_rgb_packed2planar.cpp  image_rotation.cpp
src/tools/: utils.cpp  utils.h
tools/scripts/: adb_push_all.bat  adb_push_bin.bat  package.sh
